[package]
name = "redox-fatd"
description = "FAT32 Userspace Driver"
version = "0.1.0"
authors = ["Deepak Sirone <deepaksirone94@gmail.com>"]

[dependencies]
spin = "0.4"
redox_syscall = "0.1.40"
mbr = "0.2.2"
gpt = "0.2.2"
fatfs = "0.3.0"

[target.'cfg(unix)'.dependencies]
fuse = "0.3"
libc = "0.2"
time = "0.1"
